<resources>
    <string name="app_name">Validator</string>
    <string name="birthday">Birthday</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello</string>
</resources>
