<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="SignUpViewModel"
            type="com.shift.test.validator.signup.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_up_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".signup.SignUpFragment">


            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:text="@string/first_name"
                app:layout_constraintBottom_toTopOf="@+id/first_name_edit"
                app:layout_constraintStart_toStartOf="@+id/first_name_edit" />

            <EditText
                android:id="@+id/first_name_edit"
                style="@style/InputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                app:layout_constraintBottom_toTopOf="@+id/last_name_edit"
                app:layout_constraintEnd_toEndOf="@+id/last_name_edit"
                app:layout_constraintStart_toStartOf="@+id/last_name_edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                app:layout_constraintBottom_toTopOf="@+id/last_name_edit"
                app:layout_constraintStart_toStartOf="@+id/last_name_edit" />

            <EditText
                android:id="@+id/last_name_edit"
                style="@style/InputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                app:layout_constraintBottom_toTopOf="@+id/birthday_edit"
                app:layout_constraintEnd_toEndOf="@+id/birthday_edit"
                app:layout_constraintStart_toStartOf="@+id/birthday_edit"
                app:layout_constraintTop_toBottomOf="@+id/first_name_edit" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                app:layout_constraintBottom_toTopOf="@+id/birthday_edit"
                app:layout_constraintStart_toStartOf="@+id/birthday_edit" />

            <EditText
                android:id="@+id/birthday_edit"
                style="@style/InputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                app:layout_constraintBottom_toTopOf="@+id/password_edit"
                app:layout_constraintEnd_toEndOf="@+id/password_edit"
                app:layout_constraintStart_toStartOf="@+id/password_edit"
                app:layout_constraintTop_toBottomOf="@+id/last_name_edit" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/password_edit"
                app:layout_constraintStart_toStartOf="@+id/password_edit" />

            <EditText
                android:id="@+id/password_edit"
                style="@style/InputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/confirm_password_edit"
                app:layout_constraintEnd_toEndOf="@+id/confirm_password_edit"
                app:layout_constraintStart_toStartOf="@+id/confirm_password_edit"
                app:layout_constraintTop_toBottomOf="@+id/birthday_edit" />

            <TextView
                android:id="@+id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                app:layout_constraintBottom_toTopOf="@+id/confirm_password_edit"
                app:layout_constraintStart_toStartOf="@+id/confirm_password_edit" />

            <EditText
                android:id="@+id/confirm_password_edit"
                style="@style/InputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_edit" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:onClick="@{() -> SignUpViewModel.onSignUp()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="628dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/medium_margin"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>